Bug 486203 - recent documents doesn't show recently edited documents
Summary: recent documents doesn't show recently edited documents
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-27 15:01 UTC by Ryein Goddard
Modified: 2024-05-05 22:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ryein Goddard 2024-04-27 15:01:22 UTC
SUMMARY
Recent Documents doesn't really seem to function properly.  For example I created 2 documents with kate.  Closed Kate and rebooted my computer.  It doesn't show the 2 recent documents I saved.  It does show documents I opened earlier, but not the 2 most recent I created and saved with Kate.  Maybe its missing adding those documents to the recent list on save?

STEPS TO REPRODUCE
1. Create a new buffer
2. puts something in it and save the file
3. Close kate and reopen

OBSERVED RESULT
Your saved file doesn't show up in the recent list like it should

EXPECTED RESULT
If you save or open a file it should be in the recent list.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240425
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Kernel Version: 6.8.7-1-default (64-bit)
Graphics Platform: Wayland
Processors: 32 × AMD Ryzen 9 7950X3D 16-Core Processor
Memory: 30.5 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 4090/PCIe/SSE2
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: X670E AORUS PRO X
System Version: -CF
Comment 1 Bug Janitor Service 2024-04-28 17:14:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1475
Comment 2 Christoph Cullmann 2024-04-29 08:48:47 UTC
Git commit 22e53dec2537e5c19b9eb707eff2c309b226f1c2 by Christoph Cullmann.
Committed on 29/04/2024 at 08:34.
Pushed by cullmann into branch 'master'.

keep track of recent used files on saveAs & close

M  +10   -1    apps/lib/kateviewmanager.cpp
M  +3    -0    apps/lib/kateviewspace.cpp

https://invent.kde.org/utilities/kate/-/commit/22e53dec2537e5c19b9eb707eff2c309b226f1c2
Comment 3 Christoph Cullmann 2024-04-29 08:48:48 UTC
Git commit 44d730ea77eebc0f93948e6ad1c21a964cf055a7 by Christoph Cullmann.
Committed on 29/04/2024 at 08:41.
Pushed by cullmann into branch 'release/24.05'.

keep track of recent used files on saveAs & close


(cherry picked from commit 22e53dec2537e5c19b9eb707eff2c309b226f1c2)

M  +10   -1    apps/lib/kateviewmanager.cpp
M  +3    -0    apps/lib/kateviewspace.cpp

https://invent.kde.org/utilities/kate/-/commit/44d730ea77eebc0f93948e6ad1c21a964cf055a7