keep track of recent used files on saveAs & close

BUG: 486203